# ceph-mcp-server

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  entrypoint.sh  pyproject.toml  run_server.py
.devcontainer/: devcontainer.json
.github/workflows/: docker.yaml  tag.yaml
docs/: ceph-mgr-restapi-openapi.json  mermaid-flow.md  project-setup.sh  project-structure.md
docs/ceph-mgr-rest-api/: api-endpoints.md  cephfs.json  daemon.json  health-api-full.json  health-api-minimal.json  host.json  osd.json  pool.json  pools.json
src/ceph_mcp/: __init__py  server.py
src/ceph_mcp/api/: base.py  client.py
src/ceph_mcp/api/endpoints/: cephfs.py  daemon.py  health.py  host.py  osd.py  pool.py
src/ceph_mcp/config/: settings.py
src/ceph_mcp/handlers/: base.py  cephfs.py  daemon.py  health.py  host.py  osd.py  pool.py
src/ceph_mcp/models/: base.py  cephfs.py  daemon.py  health.py  host.py  osd.py  pool.py
src/ceph_mcp/resources/: base.py  health.py
src/ceph_mcp/tools/: base.py  cephfs.py  daemon.py  health.py  host.py  osd.py  pool.py
tests/: test_basic_functionality.py
